# godot-text-to-speech

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  plugin.cfg
.github/workflows/: build.yml
addon/: README.md
addons/text_to_speech/: README.md  example.gd  example.gd.uid  example_scene.tscn  plugin.cfg  text_to_speech.gdextension  text_to_speech.gdextension.uid  text_to_speech_1d.gd  text_to_speech_1d.gd.uid  text_to_speech_2d.gd  text_to_speech_2d.gd.uid  text_to_speech_3d.gd  text_to_speech_3d.gd.uid  text_to_speech_engine.gd  text_to_speech_engine.gd.uid  text_to_speech_plugin.gd  voice_manager.gd  voice_manager.gd.uid
addons/texttospeech/: Example.gd  Example.tscn  Plugin.gd  TextToSpeech.gd  TextToSpeech2D.gd  TextToSpeech3D.gd  TextToSpeechEngine.gd  plugin.cfg  texttospeech.gdnlib  texttospeech.gdns
flite/: flite_wrapper.c  flite_wrapper.h
include/flite/: cst_file.h
src/: Makefile  flite_wrapper.c  register_types.cpp  text_to_speech.cpp  text_to_speech.h  tts.c
